fix: remove flex for list-items, truncating urls

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -87,7 +87,6 @@
   }
 
   .task-list-item {
-    display: flex;
     align-items: center;
 
     &::before {
